[gd_scene load_steps=6 format=3 uid="uid://xiisxpj7bkax"]

[ext_resource type="Script" path="res://src/main.gd" id="1_pv4xg"]
[ext_resource type="PackedScene" uid="uid://b51bevddpeabu" path="res://src/player.tscn" id="1_ynllu"]
[ext_resource type="PackedScene" uid="uid://b0cw2t60qp338" path="res://src/mob.tscn" id="2_tsbpl"]
[ext_resource type="PackedScene" uid="uid://deyftg5xr7kl5" path="res://src/hud.tscn" id="4_bifyi"]

[sub_resource type="Curve2D" id="Curve2D_x1mnv"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_pv4xg")
mob_scene = ExtResource("2_tsbpl")

[node name="Player" parent="." instance=ExtResource("1_ynllu")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.4

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_x1mnv")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." instance=ExtResource("4_bifyi")]

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
